--- a/FirebaseAuth/Base.lproj/Main.storyboard
+++ b/FirebaseAuth/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,8 +21,67 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leD-lI-Grd" customClass="GIDSignInButton">
+                                <rect key="frame" x="16" y="308" width="343" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="JuO-ra-0hc"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Yl4-hu-CdN">
+                                <rect key="frame" x="16" y="103" width="343" height="150"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Px-bN-uyV">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Xf-eE-YZd">
+                                        <rect key="frame" x="0.0" y="60" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="McN-eH-Ts6">
+                                        <rect key="frame" x="0.0" y="120" width="343" height="30"/>
+                                        <state key="normal" title="Sigin With Email Id"/>
+                                        <connections>
+                                            <action selector="emailSiginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NDR-oQ-gZf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ktx-Mg-uRV">
+                                <rect key="frame" x="131" y="409" width="112" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="112" id="18C-7d-cHH"/>
+                                </constraints>
+                                <state key="normal" title="SignOut"/>
+                                <connections>
+                                    <action selector="signOutButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n1x-ps-65l"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="leD-lI-Grd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="CwF-eI-8Qf"/>
+                            <constraint firstItem="Ktx-Mg-uRV" firstAttribute="top" secondItem="leD-lI-Grd" secondAttribute="bottom" constant="51" id="Fcc-oP-Jct"/>
+                            <constraint firstItem="Yl4-hu-CdN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="IJ8-lu-lbw"/>
+                            <constraint firstItem="Yl4-hu-CdN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OdQ-zI-feB"/>
+                            <constraint firstItem="Yl4-hu-CdN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="83" id="Vhb-Qt-hvl"/>
+                            <constraint firstItem="leD-lI-Grd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XXn-E7-3Dn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Yl4-hu-CdN" secondAttribute="trailing" id="Yq3-cl-Urk"/>
+                            <constraint firstItem="leD-lI-Grd" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="jVJ-3x-wjJ"/>
+                            <constraint firstItem="leD-lI-Grd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="n3l-to-6m3"/>
+                            <constraint firstItem="Ktx-Mg-uRV" firstAttribute="centerX" secondItem="leD-lI-Grd" secondAttribute="centerX" id="qc6-Er-GQQ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailIdTF" destination="3Px-bN-uyV" id="vp0-Ne-Dmc"/>
+                        <outlet property="passwordTF" destination="7Xf-eE-YZd" id="hkZ-gs-9M1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
